# mimizu

./: Cargo.toml  readme.md  template.blend
.github/workflows/: ci.yml
assets/: license.txt
examples/: app.rs
graffiti/: templates.blend
graffiti/src/: graffiti.rs
graffiti_3d/: Cargo.toml
graffiti_3d/examples/: app_2d.rs
graffiti_3d/src/: graffiti.rs  projector.rs  recognizer.rs  templates.rs  tests.rs
graffiti_vr/: Cargo.toml  build.rs
graffiti_vr/src/: chatbox.rs  egui_overlay.rs  graffiti_vr.rs  main.rs  model.rs  openvr.cpp  openvr.rs  stroke_projector.rs  three.rs  ui.rs  vr_input.rs  winutils.cpp
mimizu/: Cargo.toml
mimizu/examples/: app_2d.rs
mimizu/src/: graffiti.rs  lib.rs  projector.rs  recognizer.rs  templates.rs  tests.rs
mimizu_vr/: Cargo.toml
mimizu_vr/src/: chatbox.rs  egui_texture.rs  main.rs  model.rs  openvr.cpp  openvr.rs  osdep.rs  osdep_win.rs  ui.rs  vr_input.rs  widget.rs  winutils.cpp
src/: graffiti.rs  lib.rs  main.rs  recognizer.rs  templates.rs  tests.rs
tegaki/: Cargo.toml
tegaki/examples/: app_2d.rs
tegaki/src/: recognizer.rs  templates.rs  tests.rs
tegaki_vr/: Cargo.toml
tegaki_vr/src/: main.rs  model.rs  ui.rs  vr_input.rs
