[package]
name = "mimizu_vr"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "*"
eframe = "*"
wana_kana = "*"
mimizu = { path = "../mimizu" }

[target."cfg(windows)".dependencies.windows-sys]
version = "*"
features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_System_WindowsProgramming",
	"Win32_UI_Input_KeyboardAndMouse",
]
